--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "ag-charts-react": "^3.1.0",
     "ag-grid-community": "^25.1.0",
     "ag-grid-react": "^25.1.0",
+    "file-saver": "^2.0.5",
     "plotly.js": "^1.58.4",
     "react": "^17.0.2",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.4",
     "react-pivottable": "^0.11.0",
@@ -19,6 +21,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
+    "recharts-to-png": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1"
