--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "ag-charts-react": "^3.1.0",
     "ag-grid-community": "^25.1.0",
     "ag-grid-react": "^25.1.0",
+    "date-fns": "^2.21.3",
     "file-saver": "^2.0.5",
     "plotly.js": "^1.58.4",
     "react": "^17.0.2",
     "react-component-export-image": "^1.0.6",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.4",
     "react-pivottable": "^0.11.0",
@@ -21,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-semantic-ui-datepickers": "^2.13.1",
     "recharts": "^2.0.9",
     "recharts-to-png": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
