--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "plotly.js": "^1.58.4",
     "react": "^17.0.2",
     "react-component-export-image": "^1.0.6",
+    "react-csv": "^2.0.3",
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.4",
