--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.4",
+    "react-pdf": "^5.3.0",
     "react-pivottable": "^0.11.0",
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.2.0",
